Fix double border issue when no JS

--- a/src/hmlr/components/header/_index.scss
+++ b/src/hmlr/components/header/_index.scss
@@ -8,7 +8,7 @@
   }
 
   .hmlr-header--has-menu {
-    &::after {
+    .js-enabled &::after {
       height: govuk-spacing(2);
       position: absolute;
       top: 100%;
